--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -9,10 +9,10 @@ div.input {
 }
 
 span.name {
-    font-size: 0.9rem;
-    height: 1.4em;
+    font-size: 14px;
+    /* height: 1.4em; */
     min-width: 10em;
-    margin-right: 2.4em;
+    margin-right: 14px;
     transition: color 0.2s ease;
 }
 
@@ -31,7 +31,7 @@ span.name {
 .input-data {
     border-radius: 4px;
     overflow: hidden;
-    background: #ffffff;
+    /* background: #f6f8fa !important; */
     outline: 1px solid #0000001c;
     height: 30px;
     /* width: 100%; */
@@ -53,13 +53,8 @@ button.command-button:hover,
 }
 
 .input-data-list {
-    overflow: visible;
     padding-top: 0.1em;
-    display: inline-grid;
-    flex-direction: column;
-    /* width: 4rem; */
-    /* min-width: 16rem; */
-    background: #fff;
+    display: inline-flex;
     align-items: center;
     justify-items: end;
     max-width: 16rem;
@@ -82,7 +77,7 @@ button.command-button:hover,
     position: absolute;
     margin-top: 0.3rem;
     background: #fafafa;
-    margin-right: -10px;
+    margin-left: -10px;
     padding: 10px 10px;
     border-radius: 7px;
     border: 1px solid #00000036;
@@ -161,7 +156,7 @@ div.page-title {
 
 .input-box label {
     position: relative;
-    cursor: pointer;
+    /* cursor: pointer; */
     display: flex;
     align-items: center;
 }
