--- a/view/assets/styles/font-icon.css
+++ b/view/assets/styles/font-icon.css
@@ -1,5 +1,5 @@
 .card-button>i::before {
-    content: '\f107';
+    content: "\f107";
 }
 
 i.start-game {
@@ -12,20 +12,20 @@ i.start-game {
 }
 
 i.start-game::before {
-    content: '\f135';
+    content: "\f135";
 }
 
 i.pro-settings::before {
-    content: '\f1de';
+    content: "\f1de";
 }
 
 i.debug-settings::before {
-    content: '\f0ad';
+    content: "\f0ad";
 }
 
 i.java-logo::before {
-    content: '\f4e4';
-    font-family: 'fa';
+    content: "\f4e4";
+    font-family: "fa";
     font-style: normal;
     font-size: 1.9rem;
 }
@@ -35,8 +35,8 @@ i.arrows-rotate {
 }
 
 i.arrows-rotate::before {
-    content: '\f021';
-    font-family: 'fa-pro';
+    content: "\f021";
+    font-family: "fa-pro";
     font-weight: 400;
     font-style: normal;
     font-size: 1.6rem;
@@ -47,12 +47,16 @@ i.paintbrush {
 }
 
 i.paintbrush::before {
-    content: '\f1fc';
+    content: "\f1fc";
+}
+
+i.play::before {
+    content: "\f04b";
 }
 
 i.spinner-third,
 i.circle-check {
-    font-family: 'Font Awesome 6 Duotone';
+    font-family: "Font Awesome 6 Duotone";
     font-style: normal;
     font-weight: 600;
     margin-right: 9.1px;
@@ -62,78 +66,79 @@ i.circle-check {
 }
 
 i.circle-check {
-    font-family: 'fa-pro';
+    font-family: "fa-pro";
     font-weight: 200;
     margin-right: 10px;
 }
 
 i.spinner-third::before {
-    content: '\f3f4';
+    content: "\f3f4";
     position: absolute;
 }
 
 i.spinner-third::after {
-    content: '\f3f4\f3f4';
+    content: "\f3f4\f3f4";
     color: silver;
 }
 
 i.circle-check::before {
-    content: '\f058';
+    content: "\f058";
     color: #008501;
 }
 
 div.title-bar>div.button #min::before {
-    content: '\f068';
+    content: "\f068";
     font-size: 1.4rem;
     line-height: 2.7;
-    transform: scale(0.85, 1);
+    transform: scale(1.05, 1.1);
 }
 
 div.title-bar>div.button #close::before {
-    content: '\f00d';
+    content: "\f00d";
     font-size: 1.4rem;
     line-height: 2.2;
+    transform: scale(1.1);
 }
 
 i#user-add:before {
-    content: '\f3fd';
+    content: "\f3fd";
 }
 
 i#nav-3:before {
-    content: '\f234';
+    content: "\f234";
 }
 
 i#nav-4:before {
-    content: '\f019';
+    content: "\f019";
 }
 
 i#nav-5:before {
-    content: '\f013';
+    content: "\f013";
 }
 
 i#nav-6:before {
-    content: '\f085';
+    content: "\f085";
 }
 
 i#nav-7:before {
-    content: '\f494';
+    content: "\f494";
 }
 
 button#start::before {
-    content: '\f135';
+    content: "\f135";
 }
 
 .choose-file>i::before {
-    content: '\f07c';
+    content: "\f07c";
     font-style: normal;
 }
 
 i.folder-arrow-down {
-    font-family: 'fa-pro';
+    font-family: "fa-pro";
 }
 
 i.folder-arrow-down::before {
-    content: '\f019';
+    content: "\f019";
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -141,82 +146,106 @@ i.folder-arrow-down::before {
 }
 
 .sidebar-button i::before {
-    content: '\f0c9';
+    content: "\f0c9";
 }
 
 i.rectangle-terminal::before {
-    content: '\e236';
+    content: "\e236";
 }
 
 i.screwdriver-wrench::before {
-    content: '\f7d9';
+    content: "\f7d9";
 }
 
 i.folders::before {
-    content: '\f660';
+    content: "\f660";
 }
 
 i#newspaper::before {
-    content: '\f1ea';
+    content: "\f1ea";
 }
 
 i#cube::before {
-    content: '\f1b2';
+    content: "\f1b2";
 }
 
 i.gamepad::before {
-    content: '\f11b';
+    content: "\f11b";
 }
 
 i.user::before {
-    content: '\f007';
+    content: "\f007";
 }
 
 i.house::before {
-    content: '\f015';
+    content: "\f015";
 }
 
 i.palette::before {
-    content: '\f53f';
+    content: "\f53f";
 }
 
 i.download::before {
-    content: '\f019';
+    content: "\f019";
 }
 
 i.wheelchair::before {
-content: '\f193';
+    content: "\f193";
 }
 
 i.arrow-left::before {
-    content: '\f060';
+    content: "\f060";
 }
 
 i.user-tie::before {
-    content: '\f508';
+    content: "\f508";
 }
 
 i.pen-to-square::before {
-    content: '\f044';
+    content: "\f044";
 }
 
 i.triangle-exclamation::before {
-    content: '\f071';
+    content: "\f071";
 }
 
 i.brush::before {
-    content: '\f55d';
+    content: "\f55d";
 }
 
 i.window-flip::before {
-    content: '\f40f';
-    font-family: 'fa-pro';
+    content: "\f40f";
+    font-family: "fa-pro";
 }
 
 i.arrows-spin::before {
-    content: '\e4bb';
+    content: "\e4bb";
 }
 
 i.hand::before {
-    content: '\f256';
+    content: "\f256";
+}
+
+i.gear::before {
+    content: "\f013";
+}
+
+i.circle-info::before {
+    content: "\f05a";
+}
+
+i.star::before {
+    content: "\f005";
+}
+
+i.map::before {
+    content: "\f279";
+}
+
+i.puzzle-piece::before {
+    content: "\f12e";
+}
+
+i.lightbulb-on::before {
+    content: "\f672";
 }
