--- a/view/index.html
+++ b/view/index.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8" />
   <title>Black Magic Launcher</title>
   <!-- 加载样式表 -->
-  <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
-  <link rel="stylesheet" type="text/css" href="./assets/styles/font.css" />
-  <link rel="stylesheet" type="text/css" href="./assets/styles/animation.css" />
-  <link rel="stylesheet" type="text/css" href="./assets/styles/font-icon.css" />
-  <link rel="stylesheet" type="text/css" href="./assets/styles/control.css" />
+  <link rel="stylesheet" href="./assets/styles/index.css" />
+  <link rel="stylesheet" href="./assets/styles/font.css" />
+  <link rel="stylesheet" href="./assets/styles/animation.css" />
+  <link rel="stylesheet" href="./assets/styles/font-icon.css" />
+  <link rel="stylesheet" href="./assets/styles/control.css" />
   <!-- 加载脚本 -->
   <script async src="./vendor/jquery.js"></script>
   <script>
@@ -19,9 +19,9 @@
     }
   </script>
   <script async src="./vendor/ac-colors.min.js"></script>
-  <!-- <script src="./vendor/hsvToRgb.js"></script> -->
+  <script async src="./vendor/hsvToRgb.js"></script>
   <!-- <script src="./vendor/jquery-ui.min.js"></script> -->
-  <script async src="./vendor/vue.js"></script>
+  <script src="./vendor/vue.js"></script>
   <script async src="./vendor/vanilla-tilt.js"></script>
   <script async src="./app/core/auth.js"></script>
   <script async src="./app/core/download.js"></script>
@@ -42,10 +42,6 @@
   <!-- 窗口主体 -->
   <div id="win">
     <div class="popup_window" id="pop_up_window_shadow"></div>
-    <div class="choose-file-msg">
-      <p>请在打开的窗口中选择文件</p>
-    </div>
-
     <div class="title-bar">
       <div class="title">
         <div id="icon"></div>
@@ -68,54 +64,6 @@
     <main class="page" onclick="$('#sidebar').addClass('sidebar-close');">
       <div class="page" id="main">
         <!-- 在这里挂载主要页面内容 -->
-        <div class="home-page" id="home_pg">
-          <div>
-            <div class="child-sidebar">
-              <li class="active" onclick="sidebar_active(this, '597CE489')"><i class="house"></i>主页</li>
-
-              <p>游戏</p>
-              <ul class="gamelist" id="gamelist" onclick="sidebar_active(this, '4AA85CFD')">
-                <li>
-                  <label>
-                    <input type="radio" name="gamelist">
-                    <img src="./assets/images/Grass_Block.webp">1.19.2-forge
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div>
-            <div id="597CE489" style="display: none;">
-              <card title="新情报速递" :can-swap="true" :is-swaped="false" width="100%" height="100px"></card>
-              <card title="最近游戏" :can-swap="true" :is-swaped="false" width="100%" height="100px"></card>
-              <card title="所有游戏" :can-swap="true" :is-swaped="false" width="100%" height="100px"></card>
-            </div>
-            <div id="4AA85CFD">
-              <div class="version-info card">
-                <div>
-                  <div><img src="./assets/images/Grass_Block_JE2.webp">Minecraft 1.19.2</div>
-                </div>
-                <div>
-                  <p class="version-name">Minecraft 1.19.2</p>
-                  <div style="display: flex;flex-direction: row-reverse;align-items: center;">
-                    <div class="start-game"><i class="play"
-                        style="font-family: 'fa-pro'; font-style: normal; margin-right: 5px; font-weight: 100;"></i>开始游戏
-                    </div>
-                    <i class="button gear"></i>
-                    <i class="button circle-info"></i>
-                    <i class="button star"></i>
-                  </div>
-                </div>
-              </div>
-              <card margin="10,0,0,0" title="地图存档" description="创建了0个世界" icon="map" :is-swaped=true>
-                <list-item></list-item>
-              </card>
-              <card margin="10,0,0,0" title="模组" description="启用了0个模组" icon="puzzle-piece" :is-swaped=true></card>
-              <card margin="10,0,0,0" title="资源包" description="启用了0个资源包" icon="palette" :is-swaped=true></card>
-              <card margin="10,0,20,0" title="光影包" description="启用了0个光影包" icon="map" :is-swaped=true></card>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
   </div>
