--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -1,6 +1,7 @@
 * {
     transition: color 0.1s ease, background-color 0.1s ease;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     user-select: none;
     outline: none;
@@ -37,9 +38,9 @@ img {
 }
 
 #win {
+    border-radius: 8px;
     width: 100%;
     height: 100%;
-    border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 0px 5px #00000047;
     transition: background-color 0.3s ease;
@@ -57,6 +58,7 @@ img {
     /* background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); */
     /* background: url(https://drscdn.500px.org/photo/29113281/q%3D80_h%3D600/v2?sig=d2154aab82d4596020a8b022661bb4209bd2347b7907b90f1eca2dc0fe23d8af) no-repeat center; */
     background-size: cover;
+    transition: all 0.25s ease-in;
 }
 
 div.title-bar {
@@ -248,11 +250,6 @@ div.sidebar>div {
 body {
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0);
-    /* display: flex; */
-    justify-content: center;
-    align-content: center;
-    margin-top: 5px;
-    margin-left: 5px;
 }
 
 .card {
@@ -483,7 +480,9 @@ div.page {
     margin: 23px 33px 23px 33px;
     font-size: 14px;
     overflow: visible;
+    color: rgb(0, 0, 0);
     /* max-height: 500px; */
+    /* display: none; */
 }
 
 .card-footer {
@@ -645,7 +644,7 @@ div.sidebar {
     z-index: 10000;
 }
 
-.dont_display * {
+.dont_display *, .dont_display {
     display: none !important;
 }
 
@@ -1207,7 +1206,7 @@ div.home-page {
 }
 
 div.home-page>div:first-child {
-    width: 214px;
+    width: 180px;
     overflow-x: hidden;
     overflow-y: overlay;
 }
@@ -1235,6 +1234,7 @@ ul.gamelist>li::before {
 
 ul.gamelist>li img {
     width: 20px;
+    height: 20px;
     margin-right: 6px;
 }
 
@@ -1279,6 +1279,7 @@ ul.gamelist>li {
 
 .home-page .version-info>div:first-child img {
     width: 20px;
+    height: 20px;
     margin-right: 2px;
 }
 
