Feat: 显示模组、存档列表

--- a/view/index.html
+++ b/view/index.html
@@ -5,21 +5,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Black Magic Launcher</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/styles/index.css" />
   <link rel="stylesheet" href="./assets/styles/font.css" />
   <link rel="stylesheet" href="./assets/styles/animation.css" />
   <link rel="stylesheet" href="./assets/styles/font-icon.css" />
   <link rel="stylesheet" href="./assets/styles/control.css" />
-  <script async src="./vendor/jquery.js"></script>
-  <script>
-
-  </script>
-  <script async src="./vendor/ac-colors.min.js"></script>
-  <script async src="./vendor/hsvToRgb.js"></script>
-  <!-- <script src="./vendor/jquery-ui.min.js"></script> -->
-  <script async src="./vendor/vue.js"></script>
-  <script async src="./vendor/vanilla-tilt.js"></script>
+  <script src="./vendor/jquery.js"></script>
+  <script src="./vendor/ac-colors.min.js"></script>
+  <script src="./vendor/hsvToRgb.js"></script>
+  <script src="./vendor/vue.dev.js"></script>
+  <script src="./vendor/vanilla-tilt.js"></script>
   <script async src="./app/core/auth.js"></script>
   <script async src="./app/core/download.js"></script>
   <script async src="./app/core/installer.js"></script>
@@ -77,4 +75,6 @@
 █◣　◥▅█▀　　　　▐██◤
 ▐█▙▂　　     　◢██◤
 ◥██◣　　　　◢▄◤
- 　　▀██▅▇▀>
+ 　　▀██▅▇▀
+
+-->
