--- a/view/assets/styles/animation.css
+++ b/view/assets/styles/animation.css
@@ -247,10 +247,121 @@ move-down: 下移
     opacity: 0;
 }
 
-.list-item-move,
+.zoom-out-leave-active {
+    transition: all 80ms cubic-bezier(0.65, 0, 1, 0.42)
+}
+
+.zoom-out-enter-active {
+    transition: all 250ms cubic-bezier(0, 0.65, 0.26, 1);
+}
+
+.zoom-out-leave-from {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.zoom-out-leave-to {
+    transform: scale(1.03);
+    opacity: 0;
+}
+
+.zoom-out-enter-from {
+    transform: scale(0.9);
+    opacity: 0;
+}
+
+.zoom-out-enter-to {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.zoom-in-leave-active {
+    transition: all 80ms cubic-bezier(0.65, 0, 1, 0.42)
+}
+
+.zoom-in-enter-active {
+    transition: all 250ms cubic-bezier(0, 0.65, 0.26, 1);
+}
+
+.zoom-in-leave-from {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.zoom-in-leave-to {
+    transform: scale(0.9);
+    opacity: 0;
+}
+
+.zoom-in-enter-from {
+    transform: scale(1.03);
+    opacity: 0;
+}
+
+.zoom-in-enter-to {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.slide-up-leave-active {
+    transition: all 80ms cubic-bezier(0.65, 0, 1, 0.42)
+}
+
+.slide-up-enter-active {
+    transition: all 250ms cubic-bezier(0, 0.65, 0.26, 1);
+}
+
+.slide-up-leave-from {
+    transform: translate(0, 0px);
+    opacity: 1;
+}
+
+.slide-up-leave-to {
+    transform: translate(0, -40px);
+    opacity: 0;
+}
+
+.slide-up-enter-from {
+    transform: translate(0, 40px);
+    opacity: 0;
+}
+
+.slide-up-enter-to {
+    transform: translate(0, 0px);
+    opacity: 1;
+}
+
+.slide-down-leave-active {
+    transition: all 80ms cubic-bezier(0.65, 0, 1, 0.42)
+}
+
+.slide-down-enter-active {
+    transition: all 250ms cubic-bezier(0, 0.65, 0.26, 1);
+}
+
+.slide-down-leave-from {
+    transform: translate(0, 0px);
+    opacity: 1;
+}
+
+.slide-down-leave-to {
+    transform: translate(0, 40px);
+    opacity: 0;
+}
+
+.slide-down-enter-from {
+    transform: translate(0, -40px);
+    opacity: 0;
+}
+
+.slide-down-enter-to {
+    transform: translate(0, 0px);
+    opacity: 1;
+}
+/* 
+.list-item-move, */
 /* 对移动中的元素应用的过渡 */
-.list-item-enter-active,
-.list-item-leave-active {
+.list-item-enter-active {
     transition: all 300ms ease;
 }
 
@@ -262,15 +373,17 @@ move-down: 下移
 
 /* 确保将离开的元素从布局流中删除
   以便能够正确地计算移动的动画。 */
-/* .list-item-leave-active {
+.list-item-leave-active {
    position: absolute;
    left: 0;
    right: 0;
-} */
+}
 
 @media (prefers-reduced-motion: reduce) {
-    *, *::after, *::before {
-      animation: none !important;
-      transition: none !important;
+    *,
+    *::after,
+    *::before {
+        animation: none !important;
+        transition: none !important;
     }
-  }
+}
