--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -36,15 +36,17 @@ img {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #a8a8a800;
+    background-color: #a8a8a834;
     border-radius: 10px;
-}
-
-::-webkit-scrollbar-track {
-    /* background-color: #00000000; */
     display: none;
 }
 
+::-webkit-scrollbar-track {
+    display: none;
+}
+.show-scroolbar::-webkit-scrollbar-thumb {
+    display: unset;
+}
 #setting_pg {
     margin-left: -60px;
 }
@@ -480,11 +482,10 @@ div.page {
 }
 
 .card-body {
-    /* overflow: visible; */
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     transition: all 280ms cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
@@ -492,8 +493,6 @@ div.page {
     margin: 23px 33px 23px 33px;
     font-size: 14px;
     color: rgb(0, 0, 0);
-    /* max-height: 500px; */
-    /* display: none; */
     position: relative;
 }
 
@@ -622,12 +621,6 @@ button#version_list_button {
     font-size: 1.2rem;
 }
 
-button#version_list_button {
-    font-size: 0.9rem;
-    width: 11.2rem;
-    margin-right: 0.6rem;
-}
-
 @media (max-width: 920px) {
     .container {
         display: flex;
@@ -644,8 +637,6 @@ button#version_list_button {
 
 div.sidebar {
     background-color: #ffffffcf;
-    /* margin: 50px 0 0 0px; */
-    /* border-bottom-left-radius: 8px; */
     width: 230px;
     margin-right: -230px;
     height: calc(100% - 50px);
@@ -1253,7 +1244,6 @@ ul.gamelist>li img {
 
 ul.gamelist>li {
     padding: 6px 8px;
-    margin: 0;
     display: flex;
     align-items: center;
 }
@@ -1413,4 +1403,9 @@ ul.gamelist>li {
 
 .list-item .list-item-btn:active {
     transform: scale(0.86);
+}
+
+ul.in-card {
+    max-height: 300px;
+    overflow: overlay;
 }
